terraform/minikube/modules/prometheus/istio.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: "reactory-prometheus-gateway"
  namespace: reactory
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 9090
      name: prometheus
      protocol: TCP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: reactory-prometheus-gateway
  namespace: reactory
spec:
  hosts:
  - "*"
  gateways:
  - reactory-prometheus-gateway
  tcp:
  - match:
    - port: 9090
    route:
    - destination:
        host: reactory-prometheus
        port:
          number: 9090
